# stigler

./: .pre-commit-config.yaml  README.md  dev-requirements.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: basic.yml  schedule.yml
app/db/: annotations.py  database.py  models.py
app/gql/: queries.py  types.py
migrations/: env.py
migrations/versions/: 7591086ed834_first_commit.py  795a443bd65d_first_commit.py  bf0def7d1620_first_commit.py
tests/: test_errors.py
