[tool.poetry]
name = "stigler"
version = "0.1.0"
description = ""
authors = ["Evan Baird <evanbaird@evans-mbp.lan>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aniso8601 = "9.0.1"
annotated-types = "0.6.0"
anyio = "3.7.1"
argon2-cffi = "21.3.0"
argon2-cffi-bindings = "21.2.0"
blinker = "1.7.0"
cffi = "1.16.0"
cfgv = "3.4.0"
click = "8.1.7"
distlib = "0.3.8"
dnspython = "2.4.2"
doppler-env = "0.3.1"
email-validator = "2.1.0.post1"
environs = "10.3.0"
fastapi = "0.105.0"
filelock = "3.13.1"
flask = "3.0.0"
graphene = "3.2.2"
graphql-core = "3.2.3"
graphql-relay = "3.2.0"
h11 = "0.14.0"
httptools = "0.6.1"
identify = "2.5.33"
idna = "3.4"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markdown-it-py = "3.0.0"
markupsafe = "2.1.3"
mdurl = "0.1.2"
mimesis = "11.1.0"
myapplication = "0.1.0"
nodeenv = "1.8.0"
platformdirs = "4.0.0"
pre-commit = "3.6.0"
psycopg2-binary = "2.9.6"
pycparser = "2.21"
pydantic = "2.5.3"
pydantic-core = "2.14.6"
pygments = "2.17.2"
pyjwt = "2.8.0"
python-dotenv = "1.0.0"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
rich = "13.7.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.23"
starlette = "0.27.0"
starlette-graphene3 = "0.6.0"
typing-extensions = "4.9.0"
uvicorn = "0.25.0"
uvloop = "0.19.0"
virtualenv = "20.25.0"
watchfiles = "0.21.0"
websockets = "12.0"
werkzeug = "3.0.1"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
