[tool.poetry]
name = "stigler"
version = "0.1.0"
description = ""
authors = ["Evan Baird <evanbaird@evans-mbp.lan>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["uvicorn"], version = "^0.110.0"}
gunicorn = "^21.2.0"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
pyhumps = "^3.8.0"
rich = "^13.7.1"
psycopg2-binary = "^2.9.9"
graphene = "^3.3"
doppler-env = "^0.3.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
yakutils = "^2.0.0"
pur = "^7.3.1"
pip-audit = "^2.7.2"
pytest = "^8.1.1"
pytest-clarity = "^1.0.1"
pre-commit = "^3.6.2"
mimesis = "^15.1.0"

[tool.poetry-auto-export]
output = "requirements.txt"
without_hashes = true
without = ["dev"]
without_urls = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
